[tool.poetry]
name = "seams"
version = "0.1.0"
description = ""
authors = ["Jose Beltran <jose.beltran@begeospatial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
pandas = "^1.5.2"
geopandas = "^0.12.2"
h3 = "^3.7.6"
opencv-python = "^4.7.0.68"
chardet = "^5.1.0"
dataclass-csv = "^1.4.0"
pyyaml = "^6.0"
pims = "^0.6.1"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
