[tool.poetry]
name = "seams"
version = "0.1.0"
description = ""
authors = ["Jose Beltran <jose.beltran@begeospatial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
pandas = "^1.5.2"
geopandas = "^0.12.2"
h3 = "^3.7.6"
opencv-python = "^4.7.0.68"
chardet = "^5.1.0"
dataclass-csv = "^1.4.0"
pyyaml = "^6.0"
pims = "^0.6.1"
sqlalchemy = "^1.4.46"
graphviz = "^0.20.1"
pydantic = "^1.10.4"
email-validator = "^1.3.1"
python-dotenv = "^0.21.1"
npm = "^0.1.1"
psycopg2-binary = "^2.9.5"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
